# logdir

./: .bumpversion.cfg  .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: test-and-deploy.yml
docs/: api.md  contributing.md  index.md
docs/css/: custom.css
logdir/: __init__.py
tests/: logdir_test.py
